progress on chart

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from Imdb import Imdb\n",
-    "\n",
+    "import ColorUtils\n",
     "\n",
     "from plotly import __version__\n",
     "import plotly.graph_objs as go\n",
@@ -17,16 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "foo = 'bar'"
+    "seedColor = (65, 130, 200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,26 +34,43 @@
     "    init_notebook_mode(connected=True)\n",
     "    imdb = Imdb()\n",
     "\n",
+    "    #get title:\n",
     "    title = input(\"title>\").strip()\n",
     "    print(title)\n",
+    "    \n",
+    "    #get all episodes for this title:\n",
     "    id = imdb.title2Id(title)\n",
     "    episodes = imdb.id2Episodes(id)\n",
-    "\n",
     "    episodes = sorted(episodes)\n",
-    "    print(episodes)\n",
+    "    \n",
+    "    # separate into seasons:\n",
+    "    i = 1\n",
+    "    episodesBySeason = [[]]\n",
+    "    for episode in episodes:\n",
+    "        if episode.season not in episodesBySeason:\n",
+    "            episodesBySeason.append([])\n",
+    "        episode.rawNumber = i\n",
+    "        episodesBySeason[episode.season].append(episode)\n",
+    "        i += 1\n",
     "\n",
-    "    xValues = []\n",
-    "    yValues = []\n",
-    "    for i, episode in enumerate(episodes):\n",
-    "        xValues.append(i)\n",
-    "        yValues.append(float(episode.rating.strip()))\n",
-    "\n",
-    "\n",
-    "    trace = go.Scatter(x=xValues, y=yValues, mode = 'markers')\n",
-    "    data = [trace]\n",
+    "    # create a trace for each season:\n",
+    "    trace = []\n",
+    "    for season in episodesBySeason:\n",
+    "        seedColor = ColorUtils.getRandomColor(seedColor[0], seedColor[1], seedColor[2])\n",
+    "        trace[int(season.strip())] = go.Scatter(\n",
+    "            x=map(lambda s: s.rawNumber, season), \n",
+    "            y=map(lambda s: s.rating, season), \n",
+    "            mode = 'markers', \n",
+    "            marker = dict(\n",
+    "            color = seedColor\n",
+    "        ))\n",
+    "        \n",
+    "    # create best fit lines:\n",
+    "    # TODO\n",
+    "    \n",
+    "    # create the plot layout:\n",
     "    layout = go.Layout(\n",
     "        title=title,\n",
-    "\n",
     "        xaxis=dict(\n",
     "            title='Episode',\n",
     "            titlefont=dict(\n",
@@ -71,14 +88,13 @@
     "            )\n",
     "        )\n",
     "    )\n",
-    "    fig = go.Figure(data=data, layout=layout)\n",
-    "    print(foo)\n",
+    "    fig = go.Figure(data=trace, layout=layout)\n",
     "    iplot(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -97,95 +113,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "title>bee and puppycat\n",
-      "bee and puppycat\n",
-      "Reading HTML from: http://www.imdb.com/find?ref_=nv_sr_fn&q=bee%20and%20puppycat&s=all\n",
-      "I think the ID is /title/tt4163486/\n",
-      "Reading HTML from: http://www.imdb.com/title/tt4163486/episodes?season=1\n",
-      "Reading HTML from: http://www.imdb.com/title/tt4163486/episodes?season=2\n",
-      "[{'id': '/title/tt2782722/', 'number': 0, 'rating': '8.6', 'title': 'Bee and Puppycat', 'season': 1}, {'id': '/title/tt4178336/', 'number': 1, 'rating': '7.4', 'title': 'Food', 'season': 1}, {'id': '/title/tt4178352/', 'number': 2, 'rating': '7.8', 'title': 'Farmer', 'season': 1}, {'id': '/title/tt4196858/', 'number': 3, 'rating': '7.6', 'title': 'Beach', 'season': 1}, {'id': '/title/tt4196860/', 'number': 4, 'rating': '7.7', 'title': 'Cats', 'season': 1}, {'id': '/title/tt6344628/', 'number': 5, 'rating': '8.7', 'title': 'Birthday', 'season': 1}, {'id': '/title/tt6344634/', 'number': 6, 'rating': '8.4', 'title': 'Game', 'season': 1}, {'id': '/title/tt6344636/', 'number': 7, 'rating': '8.9', 'title': 'Toast', 'season': 1}, {'id': '/title/tt6344638/', 'number': 8, 'rating': '9.2', 'title': 'Dogs', 'season': 1}, {'id': '/title/tt6344642/', 'number': 9, 'rating': '9.3', 'title': 'Wedding', 'season': 1}, {'id': '/title/tt6344646/', 'number': 10, 'rating': '9.7', 'title': 'Donut', 'season': 1}]\n",
-      "bar\n"
+      "title>alf\n",
+      "alf\n",
+      "Reading HTML from: http://www.imdb.com/find?ref_=nv_sr_fn&q=alf&s=all\n",
+      "I think the ID is /title/tt0090390/\n",
+      "Reading HTML from: http://www.imdb.com/title/tt0090390/episodes?season=1\n",
+      "Reading HTML from: http://www.imdb.com/title/tt0090390/episodes?season=2\n",
+      "Reading HTML from: http://www.imdb.com/title/tt0090390/episodes?season=3\n",
+      "Reading HTML from: http://www.imdb.com/title/tt0090390/episodes?season=4\n",
+      "Reading HTML from: http://www.imdb.com/title/tt0090390/episodes?season=5\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.plotly.v1+json": {
-       "data": [
-        {
-         "mode": "markers",
-         "type": "scatter",
-         "uid": "dd3f9ae6-8cfe-11e8-8740-4ccc6a62a3d4",
-         "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10
-         ],
-         "y": [
-          8.6,
-          7.4,
-          7.8,
-          7.6,
-          7.7,
-          8.7,
-          8.4,
-          8.9,
-          9.2,
-          9.3,
-          9.7
-         ]
-        }
-       ],
-       "layout": {
-        "title": "bee and puppycat",
-        "xaxis": {
-         "title": "Episode",
-         "titlefont": {
-          "color": "#7f7f7f",
-          "family": "Courier New, monospace",
-          "size": 18
-         }
-        },
-        "yaxis": {
-         "title": "Score",
-         "titlefont": {
-          "color": "#7f7f7f",
-          "family": "Courier New, monospace",
-          "size": 18
-         }
-        }
-       }
-      },
-      "text/html": [
-       "<div id=\"1ef05796-f8f2-4ab9-aca5-105be60e602f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "        Plotly.plot(\n",
-       "            '1ef05796-f8f2-4ab9-aca5-105be60e602f',\n",
-       "            [{\"y\": [8.6, 7.4, 7.8, 7.6, 7.7, 8.7, 8.4, 8.9, 9.2, 9.3, 9.7], \"uid\": \"dd3f9ae6-8cfe-11e8-8740-4ccc6a62a3d4\", \"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"mode\": \"markers\"}],\n",
-       "            {\"xaxis\": {\"title\": \"Episode\", \"titlefont\": {\"color\": \"#7f7f7f\", \"family\": \"Courier New, monospace\", \"size\": 18}}, \"title\": \"bee and puppycat\", \"yaxis\": {\"title\": \"Score\", \"titlefont\": {\"color\": \"#7f7f7f\", \"family\": \"Courier New, monospace\", \"size\": 18}}},\n",
-       "            {\"linkText\": \"Export to plot.ly\", \"showLink\": true}\n",
-       "        ).then(function () {return Plotly.addFrames('1ef05796-f8f2-4ab9-aca5-105be60e602f',{});}).then(function(){Plotly.animate('1ef05796-f8f2-4ab9-aca5-105be60e602f');})\n",
-       "        });</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<div id=\"1ef05796-f8f2-4ab9-aca5-105be60e602f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "        Plotly.plot(\n",
-       "            '1ef05796-f8f2-4ab9-aca5-105be60e602f',\n",
-       "            [{\"y\": [8.6, 7.4, 7.8, 7.6, 7.7, 8.7, 8.4, 8.9, 9.2, 9.3, 9.7], \"uid\": \"dd3f9ae6-8cfe-11e8-8740-4ccc6a62a3d4\", \"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"mode\": \"markers\"}],\n",
-       "            {\"xaxis\": {\"title\": \"Episode\", \"titlefont\": {\"color\": \"#7f7f7f\", \"family\": \"Courier New, monospace\", \"size\": 18}}, \"title\": \"bee and puppycat\", \"yaxis\": {\"title\": \"Score\", \"titlefont\": {\"color\": \"#7f7f7f\", \"family\": \"Courier New, monospace\", \"size\": 18}}},\n",
-       "            {\"linkText\": \"Export to plot.ly\", \"showLink\": true}\n",
-       "        ).then(function () {return Plotly.addFrames('1ef05796-f8f2-4ab9-aca5-105be60e602f',{});}).then(function(){Plotly.animate('1ef05796-f8f2-4ab9-aca5-105be60e602f');})\n",
-       "        });</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'seedColor' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-972361fa1b80>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-9-a6c81111cf5b>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mtrace\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mseason\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mepisodesBySeason\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m         \u001b[0mseedColor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mColorUtils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetRandomColor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseedColor\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseedColor\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseedColor\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m         trace[int(season.strip())] = go.Scatter(\n\u001b[1;32m     29\u001b[0m             \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrawNumber\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseason\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'seedColor' referenced before assignment"
+     ]
     }
    ],
    "source": [
